tests/security/xhpParamTaint/output.txt
ERROR: TaintedData - input.hack:4:21 - Data from a URL query string found its way to an HTML attribute